remove old data

--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Lottery app for entekhab group"
+      content="Lottery app"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Entekhab Lottery App</title>
+    <title>Lottery App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
